--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,8 +39,8 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-  geolocator: ^10.1.0
-  url_launcher: ^6.2.5
+  geolocator: ^9.0.2
+  url_launcher: ^6.1.7
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -56,12 +56,7 @@ dev_dependencies:
 flutter:
   uses-material-design: true
   assets:
-    - assets/ibirapuera.jpg
-    - assets/paulista.jpg
-    - assets/caminito.jpg
-    - assets/eiffel.jpg
-    - assets/logo.png
-    - assets/logopreload.png
+    - assets/
 
 
 
